[project]
name = "sam3-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "av>=16.1.0",
    "kernels>=0.12.2",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
